--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Pentagon</title>
+	<title>Framelix</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
+	<meta name="description" content=" best Website design and development services in odisha" />
+	<meta name="keywords" content="website designer in odisha , app development company in odisha, best web design company in sambalpur, wordpress developer in sambalpur, web developer in bargarh, top web developer in bhubaneswar" />
 	<meta name="author" content="FREEHTML5.CO" />
 
  
