--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Framelix</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content=" best Website design and development services in odisha" />
+	<meta name="description" content=" best Website design and development services in odisha and sambalpur" />
 	<meta name="keywords" content="website designer in odisha , app development company in odisha, best web design company in sambalpur, wordpress developer in sambalpur, web developer in bargarh, top web developer in bhubaneswar" />
-	<meta name="author" content="FREEHTML5.CO" />
+	<meta name="author" content="framelix" />
 
  
 
@@ -59,7 +59,7 @@
 				<div class="container">
 					<div class="nav-header">
 						<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
-						<h1 id="fh5co-logo"><a href="index.html">Pentagon</a></h1>
+						<h1 id="fh5co-logo"><a href="index.html">Framelix</a></h1>
 						<!-- START #fh5co-menu-wrap -->
 						<nav id="fh5co-menu-wrap" role="navigation">
 							<ul class="sf-menu" id="fh5co-primary-menu">
@@ -405,12 +405,12 @@
 					<div class="col-lg-4 col-md-4">
 						<div class="fh5co-blog animate-box">
 							<a href="#"><img class="img-responsive" src="images/blog-1.jpg" alt=""></a>
-							<div class="blog-text">
+							<div class="blog-text">Consonantia, there live the blind texts. Read More. Our Blog. Copyright 2018 Pentagon. All Rights Reserved. Made with by framelix / Demo Images: Unsplash.
 								<div class="prod-title">
 									<h3><a href=""#>45 Minimal Worksspace Rooms for Web Savvys</a></h3>
 									<span class="posted_by">Sep. 15th</span>
 									<span class="comment"><a href="">21<i class="icon-bubble2"></i></a></span>
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>FarConsonantia, there live the blind texts. Read More. Our Blog. Copyright 2018 Pentagon. All Rights Reserved. Made with by framelix / Demo Images: Unsplash. far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 									<a href="#" class="btn btn-primary">Read More</a>
 								</div>
 							</div> 
